HIPMLParser.js
// Generated from HIPML.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';
import HIPMLListener from './HIPMLListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class HIPMLParser extends antlr4.Parser {

    static grammarFileName = "HIPML.g4";
    static literalNames = [ null, "':'", "','", "'('", "')'", "'['", "']'",
                            "'Policy Metadata'", "'Policy Attributes'",
                            "'Coverage'", "'Exclusions'", "'Definitions'",
                            "'Contact'", null, null, null, null, null, "'Included only if'",
                            "'Excluded unless'", null, null, null, null,
                            null, null, "'- '", null, null, null, null,
                            null, "'if'", "'and'", "'or'", "'contains'",
                            "'does not contain'", null, null, null, null,
                            null, null, null, null, null, null, null, null,
                            null, null, null, null, null, null, null, null,
                            null, null, "'-'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, "METADATA_SECTION_NAME",
                             "ATTRIBUTES_SECTION_NAME", "COVERAGE_SECTION_NAME",
                             "EXCLUSIONS_SECTION_NAME", "DEFINITIONS_SECTION_NAME",
                             "CONTACT_SECTION_NAME", "METADATA_KEY", "ATTRIBUTES_KEY_WITH_STRING_VALUES",
                             "ATTRIBUTES_KEY_WITH_DATE_VALUES", "ATTRIBUTES_KEY_WITH_NUMBER_VALUES",
                             "COVERAGE_ITEM_LIMIT_KEY", "COVERAGE_ITEM_CONDITION_KEY",
                             "EXCLUSIONS_ITEM_CONDITION_KEY", "VARIABLE",
                             "PROCEDURE", "DIAGNOSIS", "SERVICE", "AMOUNT",
                             "SWITCH_PREFIX", "GROUP_EXPR_STMT_PREFIX",
                             "SWITCH_DEFAULT_SUFFIX", "ALL_ARE_TRUE", "ALL_ARE_FALSE",
                             "AT_LEAST_ONE_IS_TRUE", "AT_LEAST_ONE_IS_FALSE",
                             "IF", "AND", "OR", "CONTAINS", "DOES_NOT_CONTAIN",
                             "ADD", "SUB", "MUL", "DIV", "PER", "LT", "LTE",
                             "GT", "GTE", "NE", "EQ", "MIN", "MAX", "LOW_OF",
                             "HIGH_OF", "DIFF_DAYS", "DIFF_MONTHS", "DIFF_YEARS",
                             "DATE", "BOOLEAN", "NUMBER", "STRING", "HYPHEN",
                             "LINE_COMMENT", "COMMENT", "WS" ];
    static ruleNames = [ "policy", "policySection", "attributesSection",
                         "attributesBody", "attribute", "attributeString",
                         "attributeDate", "attributeNumber", "coverageSection",
                         "coverageBody", "coverageItem", "coverageItemName",
                         "coverageItemDetails", "coverageItemLimit", "coverageItemCondition",
                         "exclusionsSection", "exclusionBody", "exclusionItem",
                         "exclusionItemCondition", "switchStmt", "switchExpr",
                         "switchDefaultExpr", "booleanExpr", "booleanGroupExprStmt",
                         "comparatorExpr", "groupFnExpr", "numberExpr",
                         "listOpExpr", "list", "listExpr", "dateExpr", "variable",
                         "diagnosis", "procedure", "service", "amount",
                         "date", "number", "string", "bool" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = HIPMLParser.ruleNames;
        this.literalNames = HIPMLParser.literalNames;
        this.symbolicNames = HIPMLParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 22:
    	    		return this.booleanExpr_sempred(localctx, predIndex);
    	case 26:
    	    		return this.numberExpr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    booleanExpr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 5);
    		case 1:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    numberExpr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 11);
    		case 3:
    			return this.precpred(this._ctx, 10);
    		case 4:
    			return this.precpred(this._ctx, 9);
    		case 5:
    			return this.precpred(this._ctx, 8);
    		case 6:
    			return this.precpred(this._ctx, 7);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	policy() {
	    let localctx = new PolicyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, HIPMLParser.RULE_policy);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 81;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 80;
	            this.policySection();
	            this.state = 83;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1792) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	policySection() {
	    let localctx = new PolicySectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, HIPMLParser.RULE_policySection);
	    try {
	        this.state = 88;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 8:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 85;
	            this.attributesSection();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 86;
	            this.coverageSection();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 87;
	            this.exclusionsSection();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	attributesSection() {
	    let localctx = new AttributesSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, HIPMLParser.RULE_attributesSection);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.match(HIPMLParser.ATTRIBUTES_SECTION_NAME);
	        this.state = 91;
	        this.match(HIPMLParser.T__0);
	        this.state = 92;
	        this.attributesBody();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	attributesBody() {
	    let localctx = new AttributesBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, HIPMLParser.RULE_attributesBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 94;
	            this.attribute();
	            this.state = 97;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 114688) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	attribute() {
	    let localctx = new AttributeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, HIPMLParser.RULE_attribute);
	    try {
	        this.state = 102;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 14:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 99;
	            this.attributeString();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 100;
	            this.attributeDate();
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 101;
	            this.attributeNumber();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	attributeString() {
	    let localctx = new AttributeStringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, HIPMLParser.RULE_attributeString);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 104;
	        this.match(HIPMLParser.ATTRIBUTES_KEY_WITH_STRING_VALUES);
	        this.state = 105;
	        this.match(HIPMLParser.T__0);
	        this.state = 106;
	        this.string();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	attributeDate() {
	    let localctx = new AttributeDateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, HIPMLParser.RULE_attributeDate);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 108;
	        this.match(HIPMLParser.ATTRIBUTES_KEY_WITH_DATE_VALUES);
	        this.state = 109;
	        this.match(HIPMLParser.T__0);
	        this.state = 110;
	        this.date();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	attributeNumber() {
	    let localctx = new AttributeNumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, HIPMLParser.RULE_attributeNumber);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        this.match(HIPMLParser.ATTRIBUTES_KEY_WITH_NUMBER_VALUES);
	        this.state = 113;
	        this.match(HIPMLParser.T__0);
	        this.state = 116;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 3:
	        case 20:
	        case 24:
	        case 48:
	        case 49:
	        case 50:
	        case 51:
	        case 52:
	        case 53:
	        case 54:
	        case 57:
	            this.state = 114;
	            this.numberExpr(0);
	            break;
	        case 25:
	            this.state = 115;
	            this.switchStmt();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	coverageSection() {
	    let localctx = new CoverageSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, HIPMLParser.RULE_coverageSection);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.match(HIPMLParser.COVERAGE_SECTION_NAME);
	        this.state = 119;
	        this.match(HIPMLParser.T__0);
	        this.state = 120;
	        this.coverageBody();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	coverageBody() {
	    let localctx = new CoverageBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, HIPMLParser.RULE_coverageBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 123;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 122;
	            this.coverageItem();
	            this.state = 125;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 14680064) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	coverageItem() {
	    let localctx = new CoverageItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, HIPMLParser.RULE_coverageItem);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        this.coverageItemName();
	        this.state = 132;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 128;
	            this.match(HIPMLParser.T__1);
	            this.state = 129;
	            this.coverageItemName();
	            this.state = 134;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 137;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 135;
	            this.match(HIPMLParser.T__0);
	            this.state = 136;
	            this.coverageItemDetails();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	coverageItemName() {
	    let localctx = new CoverageItemNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, HIPMLParser.RULE_coverageItemName);
	    try {
	        this.state = 142;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 21:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 139;
	            this.procedure();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 140;
	            this.diagnosis();
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 141;
	            this.service();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	coverageItemDetails() {
	    let localctx = new CoverageItemDetailsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, HIPMLParser.RULE_coverageItemDetails);
	    var _la = 0;
	    try {
	        this.state = 157;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 145;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 144;
	                this.coverageItemLimit();
	                this.state = 147;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===17);
	            this.state = 149;
	            this.coverageItemCondition();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 152;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 151;
	                this.coverageItemLimit();
	                this.state = 154;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===17);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 156;
	            this.coverageItemCondition();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	coverageItemLimit() {
	    let localctx = new CoverageItemLimitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, HIPMLParser.RULE_coverageItemLimit);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 159;
	        this.match(HIPMLParser.COVERAGE_ITEM_LIMIT_KEY);
	        this.state = 160;
	        this.match(HIPMLParser.T__0);
	        this.state = 163;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 3:
	        case 20:
	        case 24:
	        case 48:
	        case 49:
	        case 50:
	        case 51:
	        case 52:
	        case 53:
	        case 54:
	        case 57:
	            this.state = 161;
	            this.numberExpr(0);
	            break;
	        case 25:
	            this.state = 162;
	            this.switchStmt();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	coverageItemCondition() {
	    let localctx = new CoverageItemConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, HIPMLParser.RULE_coverageItemCondition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 165;
	        this.match(HIPMLParser.COVERAGE_ITEM_CONDITION_KEY);
	        this.state = 166;
	        this.match(HIPMLParser.T__0);
	        this.state = 167;
	        this.booleanExpr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exclusionsSection() {
	    let localctx = new ExclusionsSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, HIPMLParser.RULE_exclusionsSection);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 169;
	        this.match(HIPMLParser.EXCLUSIONS_SECTION_NAME);
	        this.state = 170;
	        this.match(HIPMLParser.T__0);
	        this.state = 171;
	        this.exclusionBody();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exclusionBody() {
	    let localctx = new ExclusionBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, HIPMLParser.RULE_exclusionBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 174;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 173;
	            this.exclusionItem();
	            this.state = 176;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 14680064) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exclusionItem() {
	    let localctx = new ExclusionItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, HIPMLParser.RULE_exclusionItem);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 178;
	        this.coverageItemName();
	        this.state = 183;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 179;
	            this.match(HIPMLParser.T__1);
	            this.state = 180;
	            this.coverageItemName();
	            this.state = 185;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 188;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 186;
	            this.match(HIPMLParser.T__0);
	            this.state = 187;
	            this.exclusionItemCondition();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exclusionItemCondition() {
	    let localctx = new ExclusionItemConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, HIPMLParser.RULE_exclusionItemCondition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 190;
	        this.match(HIPMLParser.EXCLUSIONS_ITEM_CONDITION_KEY);
	        this.state = 191;
	        this.match(HIPMLParser.T__0);
	        this.state = 192;
	        this.booleanExpr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	switchStmt() {
	    let localctx = new SwitchStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, HIPMLParser.RULE_switchStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 194;
	        this.match(HIPMLParser.SWITCH_PREFIX);
	        this.state = 196;
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 195;
	        		this.switchExpr();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 198;
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,16, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 200;
	        this.switchDefaultExpr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


